<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F5FF"
    tools:context=".ui.drawer.WithdrawalRequestsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_marginTop="10dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="18dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pul_olmadingizmi"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefon_orqali_bog_lanish"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoki_bizning_telegram_botimiz"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/medium"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14sp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:itemCount="10"
            tools:listitem="@layout/zayavka_na_vivod_item" />

    </LinearLayout>

</FrameLayout>