<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/bonuslar"
            android:textColor="@color/black"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/umumiy_xizmatlar"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/bonus"
            app:layout_constraintTop_toBottomOf="@+id/bonus" />

        <TextView
        android:id="@+id/total_summa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/umumiy_qiymat"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/count"
        app:layout_constraintTop_toBottomOf="@+id/count" />

        <TextView

            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/sizning_bonusingiz"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/total_summa"
            app:layout_constraintTop_toBottomOf="@+id/total_summa" />

        <TextView
            android:id="@+id/total_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/green"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/link_color"
            app:layout_constraintBottom_toBottomOf="@+id/bonus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bonus" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>