<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registeration.ui.PinView.PinActiveFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="70dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/pass_code_view"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/pin"
            android:textColor="#140955"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/pin_kod_bilan_keling"
            android:textColor="@color/black" />



    </LinearLayout>


    <in.arjsna.passcodeview.PassCodeView
        android:id="@+id/pass_code_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="25dp"
        app:digit_size="40.0dp"
        app:digits="5"
        app:empty_drawable="@drawable/empty_dot"
        app:filled_drawable="@drawable/filled_dot"
        app:key_text_size="30.0sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_remuve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/parolni_unutdingizmi"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:textColor="@color/link_color" />

</LinearLayout>