<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    android:layout_margin="5dp"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="match_parent">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/bizning_taksi_kompaniyamiz_sizni_ntaklif_qiladi"
           android:textAlignment="center"
           android:layout_marginTop="10dp"
           android:textColor="@color/black"
           android:fontFamily="@font/medium"
           android:textSize="20sp"
           />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Ахмедов Одилжон\nАбдурахманович"
           android:textColor="@color/black"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/inter_regular"
           android:textSize="16sp"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="тел: +998 91 001 5000"
           android:textColor="@color/black"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/inter_regular"
           android:textSize="16sp"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="ID 91 001 5000"
           android:textColor="@color/black"
           android:layout_marginLeft="20dp"
           android:layout_marginTop="15dp"
           android:fontFamily="@font/inter_bold"
           android:textSize="16sp"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginVertical="15dp"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ha_to_g_ri"
               android:textAllCaps="false"
               android:backgroundTint="@color/link_color"
               app:cornerRadius="5dp"
               />
           <com.google.android.material.button.MaterialButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="16dp"
               android:text="@string/yo_q_to_g_ri_emas"
               android:textAllCaps="false"
               android:backgroundTint="@color/red"
               app:cornerRadius="5dp"
               />

       </LinearLayout>
   </LinearLayout>

</androidx.cardview.widget.CardView>